feat: adding realtime camera and sound extraction

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,54 @@
-./venv
-.DS_Store
-__pycache__/
-/camera_server/venv
-/camera_server/.venv
-/camera_server/__pycache__/
-/camera_server/.DS_Store
+# Ignore all video and audio recordings
+camera_server/recordings/
+camera_server/audio_only/
+camera_server/video_only/
+extracted_streams/
 
-# Ignore recorded media files
+# Python cache files
+__pycache__/
+/camera_server/__pycache__/
+/camera_server/.venv
+/camera_server/venv
+/camera_server/.DS_Store
 /camera_server/recordings/
 /camera_server/video_only/
 /camera_server/audio_only/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
