--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,154 @@
-./venv
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter & IPython
+.ipynb_checkpoints
+profile_default/
+ipython_config.py
+
+# Package managers
+.pdm.toml
+.pdm-python
+.pdm-build/
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE settings
+.idea/
+.vscode/
+.spyderproject
+.spyproject
+.ropeproject
+
+# Type checkers and linters
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.pytype/
+.ruff_cache/
+
+# OS specific
+.DS_STORE
+.pgdata
+
+# AWS
+.aws
+
+# Project specific
+test_results*
+recordings_with_transcripts/
+
+# Terraform
+/infrastructure/.terraform/
+/infrastructure/shared/.terraform/
+
+# Whisper.cpp specific
+whisper.cpp/build/
+whisper.cpp/bin/
+whisper.cpp/lib/
+whisper.cpp/**/*.class
+whisper.cpp/**/*.o
+whisper.cpp/**/*.so
+whisper.cpp/**/*.a
+whisper.cpp/**/*.dll
+whisper.cpp/**/*.dylib
+whisper.cpp/bindings/java/bin/
+whisper.cpp/bindings/java/build/
+
+# PyPI
+.pypirc
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# TypeScript
+*.tsbuildinfo
+.next
+dist/
+out/
