--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,42 +2,38 @@
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
+[project]
 name = "fast-api-docker-poetry"
 version = "0.1.0"
-description = "Fast Api voice chat bot API" 
-authors = ["xsnyrch"]
+description = "Fast Api voice chat bot API"
+authors = [{ name = "xsnyrch" }]
+requires-python = ">=3.10,<4.0"
+dependencies = [
+    "fastapi>=0.115.12,<0.116.0",
+    "alembic>=1.10.4,<2.0.0",
+    "python-multipart>=0.0.20,<0.1.0",
+    "python-ulid>=1.1.0,<2.0.0",
+    "backoff>=2.2.1,<3.0.0",
+    "sqlalchemy>=2.0.12,<3.0.0",
+    "asyncpg>=0.27.0,<0.30.0",
+    "psycopg2-binary>=2.9.6,<3.0.0",
+    "bcrypt>=4.0.1,<5.0.0",
+    "passlib>=1.7.4,<2.0.0",
+    "python-jose[cryptography]>=3.3.0,<4.0.0",
+    "lmstudio>=1.3.0,<2.0.0",
+    "praisonaiagents[llm] (>=0.0.76,<0.0.77)",
+    "piper-tts >=1.2.0, <2.0.0",
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "ur_rtde >=1.5.5, <2.0.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-fastapi = "^0.95.1"
-uvicorn = "^0.18.2"
-alembic = "^1.10.4"
-python-multipart = "^0.0.5"
-python-ulid = "^1.1.0"
-backoff = "^2.2.1"
-fastapi-restful = "^0.4.3"
-sqlalchemy = "^2.0.12"
-asyncpg = "^0.27.0"
-psycopg2-binary = "^2.9.6"
-bcrypt = "^4.0.1"
-passlib = "^1.7.4"
-python-jose = { extras = ["cryptography"], version = "^3.3.0" }
-opentelemetry-distro = "^0.39b0"
-opentelemetry-exporter-otlp = "^1.18.0"
-opentelemetry-contrib-instrumentations = "^0.39b0"
-piper-tts = "^1.2.0"
-lmstudio = "^1.3.0"
-
-[tool.poetry.group.dev.dependencies]
-black = "^22.6.0"
-pyproject-flake8 = "^0.0.1a4"
-pre-commit = "^2.19.0"
-pytest = "^7.1.2"
-pytest-cov = "^3.0.0"
-types-PyYAML = "^6.0.9"
-pytest-asyncio = "^0.21.0"
-ipykernel = "^6.29.5"
+[project.optional-dependencies]
+dev = [
+    "black>=22.6.0,<23.0.0",
+    "pyproject-flake8>=0.0.1a4,<0.1.0",
+    "pre-commit>=2.19.0,<3.0.0",
+    "ipykernel>=6.29.5,<7.0.0",
+]
 
 [tool.black]
 line-length = 100
