--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "realtime-examples",
+  "name": "frontend",
+  "description": "Frontend for the Robotika voice assistant",
+  "author": "xsnyrch",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +13,7 @@
   "dependencies": {
     "@lmstudio/sdk": "^1.1.1",
     "@mintplex-labs/piper-tts-web": "^1.0.4",
+    "@ricky0123/vad-react": "^0.0.30",
     "bufferutil": "^4.0.9",
     "extendable-media-recorder": "^9.2.24",
     "extendable-media-recorder-wav-encoder": "^7.0.127",
@@ -30,11 +33,12 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "cssnano": "^6.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "lightningcss": "^1.30.0",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
     "typescript": "^5"
   }
